--- a/contacta.html
+++ b/contacta.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li>
                         <a href="index.html">
-                            <img src="../img/logo.svg" alt="Logo">
+                            <img src="img/logo.svg" alt="Logo">
                         </a>
                     </li>
                     <li>
