--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li>
                         <a href="index.html">
-                            <img src="../img/logo.svg" alt="Logo">
+                            <img src="img/logo.svg" alt="Logo">
                         </a>
                     </li>
                     <li>
@@ -39,7 +39,7 @@
                 <article id="contenedorInicial">
                     <table>
                         <tr>
-                            <td><img src="/img/contenedorInicial.jpeg" alt="Incendio masivo"></td>
+                            <td><img src="img/contenedorInicial.jpeg" alt="Incendio masivo"></td>
                             
                             <td> 
                                 La imagen que tenemos delante es la prueba de los efectos que puede tener <span class="destacable">un desastre natural en cuestión de minutos</span>. <br>Nos recuerda que lo que podemos pensar que tenemos 
@@ -147,7 +147,7 @@
                     <table>
                         <tr>
                             <td>
-                                <img src="/img/terremoto.jpeg" alt="Terremoto en Haití">
+                                <img src="img/terremoto.jpeg" alt="Terremoto en Haití">
                             </td>
                             <td>
                                 El 12 de enero de 2010, Haití fue azotado por un terremoto de magnitud 7,2, 
@@ -189,7 +189,7 @@
                                 personas murieron.</span>
                             </td>
                             <td>
-                                <img src="/img/huracan.jpeg" alt="Huracán Katrina">
+                                <img src="img/huracan.jpeg" alt="Huracán Katrina">
                             </td>
                         </tr>
                     </table>
@@ -202,7 +202,7 @@
                     <table>
                         <tr>
                             <td>
-                                <img src="/img/tsunami.jpeg" alt="Terremoto en Haití">
+                                <img src="img/tsunami.jpeg" alt="Terremoto en Haití">
                             </td>
                             <td>
                                 El Tsunami de la Bahía de Lituya fue un desastre natural ocurrido 
@@ -221,7 +221,7 @@
         <footer>
             <ul>
                 <li>
-                    <img src="/img/socialmedia.png" alt="Redes Sociales">
+                    <img src="img/socialmedia.png" alt="Redes Sociales">
                 </li>
                 <li>
                     Mayores Desastres Naturales
